crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_off_canvas_paths__remove_off_canvas_paths-3.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_off_canvas_paths.rs
expression: "test_config(r#\"{ \"removeOffCanvasPaths\": true }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 128 128\">\n    <path d=\"M0 0h128v128H0z\" fill=\"none\" stroke=\"red\"/>\n    <path d=\"M10.14 51.5c4.07 1.56 7.52 4.47 7.37 11.16\" fill=\"none\" stroke=\"#00f\"/>\n    <path d=\"M100 200c4.07 1.56 7.52 4.47 7.37 11.16\" fill=\"none\" stroke=\"#00f\"/>\n</svg>\"##),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
    <path d="M0 0h128v128H0Z" fill="none" stroke="red"/>
    <path d="M10.14 51.5c4.07 1.56 7.52 4.47 7.37 11.16" fill="none" stroke="#00f"/>
</svg>
