crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_off_canvas_paths__remove_off_canvas_paths-4.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_off_canvas_paths.rs
expression: "test_config(r#\"{ \"removeOffCanvasPaths\": true }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 128 128\">\n    <path d=\"M20.16 107.3l13.18-12.18m-1.6-5.41l-16.32 6.51M13 84.5h18m77 22.8L94.83 95.12m1.6-5.41l16.32 6.51M115 84.5H98\" fill=\"none\" stroke=\"#444\" stroke-width=\"3\"/>\n</svg>\"##),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128">
    <path d="M20.16 107.3l13.18-12.18m-1.6-5.41-16.32 6.51M13 84.5h18m77 22.8L94.83 95.12m1.6-5.41 16.32 6.51M115 84.5H98" fill="none" stroke="#444" stroke-width="3"/>
</svg>
